add directive called company

--- a/app/views/dashboard/home.html
+++ b/app/views/dashboard/home.html
@@ -20,7 +20,7 @@
         <div class="col-lg-8">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <i class="fa fa-clock-o fa-fw"></i> Responsive Timeline
+                    <i class="fa fa-clock-o fa-fw"></i> Experience Timeline
                 </div>
                 <!-- /.panel-heading -->
                 <timeline></timeline>
